# saasready

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SDK_README.md  SECURITY.md  docker-compose.yml  docs.html  index.html  package.json  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-docs.yml
assets/css/: styles.e71d450c.css
assets/js/: 03a88bad.7253b143.js  17896441.4760fd9e.js  1d57131a.3de17c6b.js  1df93b7f.3c778de6.js  237.ffe71e52.js  28f89859.6f894f59.js  31b4c00c.44a89bed.js  38e7fdb2.fb92cc98.js  51dd7dfe.0c7bd3e2.js  5e95c892.8dd1d9de.js  8a59ece8.d02c8654.js  992518d4.6b5a8628.js  9eaa546a.696d667b.js  a3274588.620ed7dc.js  a7456010.ce3def2b.js  a7bd4aaa.f26fd96e.js  a94703ab.8fc620c0.js  aba21aa0.51c68c85.js  aea8ab6f.480053b6.js  b0710add.a6ba50ea.js  b3978be5.89567f38.js  bd976b55.82cadbca.js  bdc5d9af.935a85da.js  c57ff03f.84a4e737.js  ca4c9088.58f183b1.js  d981ea0f.4e2ab601.js  e330d02f.881cc31f.js  ec8bb2dd.c4255355.js  f724ce11.13d6eee8.js  fd9b6221.6e4d124d.js  fe0e3756.1d22b95a.js  main.a5d7a524.js  runtime~main.245647b2.js
backend/: .env  .env.example  Dockerfile  alembic.ini  debug_setup.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_models.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_feature_flags.py  003_role_permission.py  004_add_invitation_tokens.py  005_add_password_reset_fields.py  006_add_email_verification_fields.py  007_add_invited_email_to_memberships.py  008_make_uid_null_membrshp.py  009_add_invited_full_name.py  010_add_token_revocation_tables.py  011_rename_email_queue_metadata.py  012_add_enterprise_auth_features.py  013_enhance_account_lockouts.py  014_add_user_columns.py  015_add_locked_until_user.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  idempotency.py  monitoring.py  rate_limiter.py  security.py  seed.py
backend/app/middleware/: __init__.py  metrics.py  rate_limit.py  request_id.py  security.py
backend/app/models/: api_key.py  audit_log.py  feature_flag.py  init.py  membership.py  org_settings.py  organization.py  permission.py  role.py  sso_connection.py  token_blacklist.py  user.py
backend/app/routes/: audit.py  auth.py  feature_flags.py  init.py  organizations.py  test.py  users.py
backend/app/schemas/: audit_log.py  auth.py  common.py  feature_flag.py  init.py  invitation.py  membership.py  organization.py  role.py  user.py
backend/app/services/: audit_service.py  auth_service.py  brute_force_protection.py  device_fingerprint.py  email_service.py  feature_flag_service.py  init.py  org_service.py  rbac_service.py  suspicious_activity_detector.py  user_service.py
backend/app/tasks/: __init__.py  background_tasks.py
backend/app/utils/: helpers.py  init.py
backend/tests/: conftest.py  test_auth.py  test_organizations.py
backend/tests/unit/: test_device_fingerprint.py  test_jwt_generation.py  test_password_hashing.py  test_permission_logic.py
docs/: Architecture.html  Architecture.md  api-reference.html  api-reference.md  comparisons.html  deployment.html  deployment.md  features.html  features.md  framework-examples.html  framework-examples.md  index.md  migration.html  quickstart.html  quickstart.md  setup-guide.html  setup-guide.md  troubleshooting.html  troubleshooting.md
docs/comparisons/: auth0.html  auth0.md  clerk.html  clerk.md  index.md  workos.html  workos.md
docs/concepts/: audit-logging.html  audit-logging.md  multi-tenancy.html  multi-tenancy.md  rbac-permissions.html  rbac-permissions.md
docs/migration/: README.md  from-auth0.html  from-auth0.md  from-clerk.html  from-clerk.md  from-firebase.html  from-firebase.md  from-workos.html  from-workos.md
docs/tutorials/: multi-tenant-auth-guide.html  multi-tenant-auth-guide.md
frontend/: Dockerfile  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/accept-invite/: page.tsx
frontend/app/feature-flags/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AuditLogTable.tsx  MembersList.tsx  Navbar.tsx  OrgNavTabs.tsx  OrgSwitcher.tsx  ProtectedRoute.tsx
frontend/lib/: api.ts  auth.ts  types.ts
website/: docusaurus.config.ts  package.json
(+31 files in other folders)
